--- a/first.html
+++ b/first.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>CSS Doc</title>
-    <link rel="stylesheet" href="first.css">
+    <link rel="stylesheet" type="text/css" href="css/first.css">
 </head>
 <body>
     <p>
@@ -14,5 +14,16 @@
         how it's affected by other aspects of CSS, and importantly, how you can control it, can help you write 
         more predictable CSS.
     </p>
+    <div class="start">
+        <h1>New Model of life</h1>
+        <p>
+            The content ends up 142px wide, instead of the 100px you specified, and it breaks out of your element.
+        Why is that?
+        The box model is a core foundation of CSS. Understanding how the box model works, 
+        how it's affected by other aspects of CSS, and importantly, how you can control it, can help you write 
+        more predictable CSS.
+        </p>
+        <h3>Start from here</h3>
+    </div>
 </body>
 </html>
