--- a/one.html
+++ b/one.html
@@ -5,6 +5,6 @@
     </head>
     <body>
         <p>Hi hello world!----</p>
-        <a href="htttps:/www.google.com" target="__blank">Google Click here</a>
+        <a href="https:/www.google.com" target="__blank">Google Click here</a>
     </body>
 </html> 
